2012-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Remove bogus code.

2012-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Renew swift v2 x-auth-token before it expires.

2012-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix crash when parsing an invalid config file.

2012-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Cloudena do not have xml_version of html tag in
	  their reply.

2012-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Renew OAUTH2 token.

2012-06-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Change the default columspec to: HostName=0:-12:12,Disk=1:-11:11,Level=1:-1:1,OrigKB=1:-7:0,OutKB=1:-7:0,Compress=1:-6:1,DumpTime=1:-7:7,Dumprate=1:-6:1,TapeTime=1:-6:6,TapeRate=1:-6:1
	* man/xml-source/amanda.conf.5.xml: Document new default columnspec.
	* installcheck/catalogs/bigestimate.cat,
	  installcheck/catalogs/doublefailure.cat,
	  installcheck/catalogs/filesystemstaped.cat,
	  installcheck/catalogs/longstrange.cat,
	  installcheck/catalogs/multi-taper.cat,
	  installcheck/catalogs/normal.cat,
	  installcheck/catalogs/plannerfail.cat,
	  installcheck/catalogs/resultsmissing.cat,
	  installcheck/catalogs/retried-nofinish.cat,
	  installcheck/catalogs/retried-strange.cat,
	  installcheck/catalogs/retried.cat,
	  installcheck/catalogs/shortstrange.cat,
	  installcheck/catalogs/skipped.cat,
	  installcheck/catalogs/spanned.cat,
	  installcheck/catalogs/strontium.cat: fix for new default columnspec.

2012-06-21  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: OAUTH2 use 'max-keys'.

2012-06-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Fix update of the status file.

2012-06-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Fix memory corruption.

2012-06-20  Jean-Louis Martineau <martineau@zmanda.com>