@@ -1191,7 +1191,8 @@ interpret_response(S3Handle *hdl,
     if ((hdl->s3_api == S3_API_SWIFT_1 ||
          hdl->s3_api == S3_API_SWIFT_2) &&
 	hdl->content_type &&
-	g_str_equal(hdl->content_type, "text/plain")) {
+	(g_str_equal(hdl->content_type, "text/html") ||
+	 g_str_equal(hdl->content_type, "text/plain"))) {
 
 	char *body_copy = g_strndup(body, body_len);
 	char *b = body_copy;
